--- a/package.json
+++ b/package.json
@@ -1,12 +1,30 @@
 {
-  "name": "carrier-addon",
-  "version": "1.0.0",
-  "licenses" :
-    { "type": "MIT",
-      "url": "https://www.opensource.org/licenses/mit-license.php"
-    },
-  "repository" :
-    { "type" : "git",
-      "url" : "https://github.com/elastos/Elastos.NET.Carrier.Nodejs.SDK"
-    }
+  "name": "elastos-carrier",
+  "version": "0.0.1",
+  "description": "Elastos.NET.Carrier.Nodejs.SDK is the [Node.js Add-on](https://nodeaddons.com/) for Elastos Carrier. It allows Javascript code to call [Carrier C++](https://github.com/elastos/Elastos.NET.Carrier.Native.SDK) functions.",
+  "main": "js/elastos.js",
+  "scripts": {
+    "test": "mocha --require babel-core/register js/test/index.js",
+    "install": "node-gyp configure && node-gyp build"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/elastos/Elastos.NET.Carrier.Nodejs.SDK.git"
+  },
+  "author": "",
+  "license": "MIT",
+  "gypfile": true,
+  "bugs": {
+    "url": "https://github.com/elastos/Elastos.NET.Carrier.Nodejs.SDK/issues"
+  },
+  "homepage": "https://github.com/elastos/Elastos.NET.Carrier.Nodejs.SDK#readme",
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "chai": "^4.1.0",
+    "mocha": "^5.0.0",
+    "should": "*",
+    "sinon": "^1.17.6"
+  },
+  "dependencies": {}
 }
